--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "6"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.0",
     "parcel": "^2.3.2"
   }
 }
